--- a/pom.xml
+++ b/pom.xml
@@ -43,19 +43,17 @@
             </releases>
         </repository>
     </repositories>
-
-    <distributionManagement>
+	<distributionManagement>
         <repository>
-            <id>sonatype-staging</id>
-            <name>oss.sonatype.org Staging Repository</name>
-            <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+            <id>nexus</id>
+            <url>http://adtjaxsvn01.adt.com:8090/nexus/content/repositories/releases</url>
         </repository>
         <snapshotRepository>
-            <id>github-snapshots</id>
-            <name>oss.sonatype.org github Release Repository Snapshot Repository</name>
-            <url>http://oss.sonatype.org/content/repositories/github-snapshots/</url>
+            <id>nexus</id>
+            <url>http://adtjaxsvn01.adt.com:8090/nexus/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
+    
 
     <profiles>
         <profile>
